// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set/unset basic nested changes 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-iii",
      "set": Object {
        "slug._type": "slug",
        "slug.current": "die-hard-with-a-vengeance",
      },
    },
  },
]
`;

exports[`set/unset set + unset, image example 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-iii",
      "set": Object {
        "image.asset._ref": "image-b",
        "image.crop.bottom": 0.1,
        "image.crop.left": 0.2,
        "image.crop.right": 0.2,
        "image.crop.top": 0.1,
        "image.hotspot.height": 0.75,
        "image.hotspot.width": 0.75,
        "image.hotspot.x": 0.48,
      },
    },
  },
]
`;

exports[`set/unset set + unset, nested changes 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-iii",
      "set": Object {
        "arr[1]": null,
        "slug._type": "slug",
        "slug.current": "die-hard-with-a-vengeance",
      },
    },
  },
  Object {
    "patch": Object {
      "id": "die-hard-iii",
      "unset": Array [
        "year",
        "slug.auto",
      ],
    },
  },
]
`;

exports[`set/unset simple root-level changes 1`] = `
Array [
  Object {
    "patch": Object {
      "id": "die-hard-iii",
      "set": Object {
        "rating": 4,
        "title": "Die Hard with a Vengeance",
      },
    },
  },
]
`;
